; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_sdhost.c_SDHostDataNonBlockingRead.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_sdhost.c_SDHostDataNonBlockingRead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MMCHS_O_PSTATE = common dso_local global i64 0, align 8
@MMCHS_O_DATA = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SDHostDataNonBlockingRead(i64 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @MMCHS_O_PSTATE, align 8
  %8 = add i64 %6, %7
  %9 = call i32 @HWREG(i64 %8)
  %10 = and i32 %9, 1
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %2
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* @MMCHS_O_DATA, align 8
  %15 = add i64 %13, %14
  %16 = call i32 @HWREG(i64 %15)
  %17 = sext i32 %16 to i64
  %18 = load i64*, i64** %5, align 8
  store i64 %17, i64* %18, align 8
  store i32 1, i32* %3, align 4
  br label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %12
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @HWREG(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
